Assignments/Assignment4/vitest-out.txt
D:\Bow Valley college\SchoolWork-WebProgramming-React\Assignments\Assignment4\node_modules\.bin\vitest:2
basedir=$(dirname "$(echo "$0" | sed -e 's,\\,/,g')")
          ^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1690:18)
    at Module._compile (node:internal/modules/cjs/loader:1733:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1479:32)
    at Module._load (node:internal/modules/cjs/loader:1298:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v25.0.0
